--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
 
-  <h1>This is a header 1</h1>
+  <h1 id="header">This is a header 1</h1>
 
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus labore ut, eum! Repellat, beatae dolorem minus sapiente iste nihil explicabo impedit eos consequuntur illum corporis autem vitae cum aperiam mollitia.</p>
 
